# lame_rust_tetris

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: tetris.rc
src/: game.rs  main.rs  panic.rs  pause_control.rs  random.rs  res.rs  tetris.rs  winc.rs  winmain.rs
