[package]
name = "tetris"
version = "0.2.0"
edition = "2021"

[build-dependencies]
embed-resource = "3.0.6"

[dependencies]
windows-sys = { version = "0.61.2", default-features = false, features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Threading",
	"Win32_System_LibraryLoader",
	"Win32_Security_Cryptography",
	"Win32_Graphics_Gdi",
	"Win32_System_SystemServices",
	"Win32_UI_Input_KeyboardAndMouse"
] }

[profile.release]
opt-level="s"
panic ="abort"
lto = "fat"
strip = true
